k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: identity-api

spec:
  replicas: 3

  selector:
    matchLabels:
      app: identity-api

  template:
    metadata:
      labels:
        app: identity-api

    spec:
      containers:
        - name: api
          image: ghcr.io/zineb-b/identity-api:latest

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
          
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
