k8s/filebeat-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet

metadata:
  name: filebeat
  namespace: identity

spec:
  selector:
    matchLabels:
      app: filebeat

  template:
    metadata:
      labels:
        app: filebeat

    spec:
      serviceAccountName: filebeat
      terminationGracePeriodSeconds: 30

      containers:
        - name: filebeat
          image: docker.elastic.co/beats/filebeat:9.2.4
          imagePullPolicy: IfNotPresent

          args:
            - "-e"
            - "-c"
            - "/usr/share/filebeat/filebeat.yml"
            - "--strict.perms=false"

          securityContext:
            runAsUser: 0

          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"

            limits:
              cpu: "300m"
              memory: "500Mi"

          volumeMounts:
            - name: config
              mountPath: /usr/share/filebeat/filebeat.yml
              subPath: filebeat.yml
              readOnly: true

            - name: varlog
              mountPath: /var/log
              readOnly: true

            - name: data
              mountPath: /usr/share/filebeat/data

      volumes:
        - name: config
          configMap:
            name: filebeat-config

        - name: varlog
          hostPath:
            path: /var/log
            type: Directory

        - name: data
          emptyDir: {}
