k8s/kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: kibana
  namespace: identity

spec:
  replicas: 1

  selector:
    matchLabels:
      app: kibana

  template:
    metadata:
      labels:
        app: kibana

    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:9.2.4
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 5601

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"

            limits:
              cpu: "1"
              memory: "1Gi"

          startupProbe:
            httpGet:
              path: /api/status
              port: 5601
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /api/status
              port: 5601
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10

          livenessProbe:
            tcpSocket:
              port: 5601
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
