k8s/logstash-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: logstash
  namespace: identity

spec:
  replicas: 1

  selector:
    matchLabels:
      app: logstash

  template:
    metadata:
      labels:
        app: logstash

    spec:
      containers:
        - name: logstash
          image: docker.elastic.co/logstash/logstash:9.2.4
          imagePullPolicy: IfNotPresent

          ports:
            - name: beats
              containerPort: 5044

            - name: monitoring
              containerPort: 9600

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"

            limits:
              cpu: "500m"
              memory: "1Gi"

          readinessProbe:
            httpGet:
              path: /
              port: 9600
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10

          livenessProbe:
            tcpSocket:
              port: 9600
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5

          volumeMounts:
            - name: logstash-config
              mountPath: /usr/share/logstash/pipeline/logstash.conf
              subPath: logstash.conf

      volumes:
        - name: logstash-config
          configMap:
            name: logstash-config
