k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis
  namespace: identity

spec:
  replicas: 1

  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:
        - name: redis
          image: redis:7-alpine

          ports:
            - name: redis
              containerPort: 6379

          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 15
            periodSeconds: 20
