k8s/kibana-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: kibana
  namespace: identity

spec:
  type: ClusterIP

  selector:
    app: kibana

  ports:
    - name: http
      port: 5601
      targetPort: 5601
