k8s/logstash-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: logstash
  namespace: identity

spec:
  type: ClusterIP

  selector:
    app: logstash

  ports:
    - name: beats
      port: 5044
      targetPort: 5044

    - name: monitoring
      port: 9600
      targetPort: 9600
