k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: identity-api-service
  namespace: identity

spec:
  type: ClusterIP

  selector:
    app: identity-api

  ports:
    - port: 80
      targetPort: 8080
