k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: identity-api-ingress
  namespace: identity
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
    - host: identity.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: identity-api-service
                port:
                  number: 80m
